fix: do not change the color when hover on a post entry link on mobile

--- a/_sass/_home-view.scss
+++ b/_sass/_home-view.scss
@@ -137,16 +137,21 @@
             span {
                 font-size: 15px;
             }
-            a:after {
-                content: ".";
-                color: transparent;
-                display: inline-block;
-                margin-left: .1em;
-                width: 1em;
-                background-image: url(../images/link.svg);
-                background-size: .75em;
-                background-position: center;
-                background-repeat: no-repeat;
+            h2 {
+                a:after {
+                    content: ".";
+                    color: transparent;
+                    display: inline-block;
+                    margin-left: .1em;
+                    width: 1em;
+                    background-image: url(../images/link.svg);
+                    background-size: .75em;
+                    background-position: center;
+                    background-repeat: no-repeat;
+                }
+                a:hover {
+                    color: #000000;
+                }
             }
         }
     }
